# carlosranara.com

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.sh  index.html  wrangler.toml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/app/: Cargo.toml
crates/app/src/: config.rs  lib.rs  main.rs
crates/app/src/components/: footer.rs  header.rs
crates/app/src/data/: mod.rs  projects.rs  timeline.rs
crates/app/src/pages/: contact.rs  journey.rs  mod.rs  projects.rs
crates/app/src/pages/home/: about.rs  featured.rs  hero.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: assets.rs  fallback.rs  github.rs  lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
public/: 404.html  _headers
public/gifs/: CarlOS-demo.webm  python-intep.webm  sokobot.webm  tetris-demo.webm  valentines.webm
style/: output.css
